test_fixtures/number/trailing_dot.lox
// ParserError: UnexpectedToken found Semicolon at l2c5 expected Identifier
123.;
